<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.haqiu</groupId>
    <artifactId>again</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>again.core</module>
        <module>again.dictionary</module>
        <module>again.framework</module>
        <module>again.contract</module>
        <module>again.web</module>
        <module>again.service</module>
    </modules>

    <properties>

        <tomcat7-maven-plugin.version>2.2</tomcat7-maven-plugin.version>
        <jetty-maven-plugin.version>9.0.0.v20130308</jetty-maven-plugin.version>
        <!-- <jetty-maven-plugin.version>9.3.7.v20160115</jetty-maven-plugin.version> -->
        <!-- <jetty-maven-plugin.version>9.3.10.v20160621</jetty-maven-plugin.version> -->
        <!-- <jetty-maven-plugin.version>9.3.10-SNAPSHOT</jetty-maven-plugin.version> -->

        <jetty.scanIntervalSeconds>0</jetty.scanIntervalSeconds>

        <server.name>tomcat-${project.name}</server.name>
        <server.path>/</server.path>
        <server.port>80</server.port>
        <server.jvm.params>-Xms256m -Xmx1024m -XX:MaxPermSize=256m</server.jvm.params>

        <spring.version>4.2.0.RELEASE</spring.version>
        <version.commons-loggin>1.2</version.commons-loggin>
        <version.commons-fileupload>1.2.2</version.commons-fileupload>
        <version.commons-io>2.4</version.commons-io>
        <version.httpclient>4.3.1</version.httpclient>
        <version.commons-lang3>3.1</version.commons-lang3>
        <version.slf4j>1.7.9</version.slf4j>
        <version.log4j>1.2.17</version.log4j>

        <version.aspectjweaver>1.8.4</version.aspectjweaver>
        <version.mybatis>3.2.8</version.mybatis>
        <version.mybatis-spring>1.2.2</version.mybatis-spring>
        <version.quartz>2.2.1</version.quartz>
        <version.fastjson>1.2.3</version.fastjson>

        <version.tiles>2.2.2</version.tiles>

        <version.jstl>1.2</version.jstl>

        <version.jsqlparser>0.9.1</version.jsqlparser>

        <jstl.version>1.2</jstl.version>
        <package.environment>dev</package.environment>
        <version.junit>4.9</version.junit>
        <version.servlet-api>3.1.0</version.servlet-api>
        <version.jsp-api>2.1</version.jsp-api>
        <version.druid>1.0.4</version.druid>

        <version.jackson-databind>2.3.2</version.jackson-databind>
        <version.jackson-mapper-asl>1.9.13</version.jackson-mapper-asl>
        <version.mysql>5.1.29</version.mysql>

        <version.commons-collections>3.2.1</version.commons-collections>
        <version.tk.mybatis>3.3.3</version.tk.mybatis>
        <version.pagehelper>4.0.3</version.pagehelper>
        <version.shiro>1.2.2</version.shiro>
        <version.cxf>3.1.4</version.cxf>
        <version.jackson-jaxrs-json-provider>2.3.2</version.jackson-jaxrs-json-provider>
        <version.httpclient>4.5.1</version.httpclient>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${version.junit}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>javax.servlet-api</artifactId>
                <version>${version.servlet-api}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>javax.servlet.jsp</groupId>
                <artifactId>jsp-api</artifactId>
                <version>${version.jsp-api}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>jstl</artifactId>
                <version>${jstl.version}</version>
            </dependency>
            <!-- spring -->
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-webmvc</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-jdbc</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-aop</artifactId>
                <version>${spring.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-core</artifactId>
                <version>${spring.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-test</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-beans</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-aspects</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-orm</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-tx</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context-support</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-test</artifactId>
                <version>${spring.version}</version>
                <scope>test</scope>
            </dependency>
            <!-- aspectjweaver(Spring依赖的jar)  -->
            <dependency>
                <groupId>org.aspectj</groupId>
                <artifactId>aspectjweaver</artifactId>
                <version>${version.aspectjweaver}</version>
            </dependency>

            <!-- alibaba json 转换工具 -->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>${version.fastjson}</version>
            </dependency>

            <!-- alibaba -->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>druid</artifactId>
                <version>${version.druid}</version>
            </dependency>
            <!-- alibaba -->
            <!-- jackson -->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${version.jackson-databind}</version>
            </dependency>
            <dependency>
                <groupId>org.codehaus.jackson</groupId>
                <artifactId>jackson-mapper-asl</artifactId>
                <version>${version.jackson-mapper-asl}</version>
            </dependency>

            <!-- mysql -->
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>${version.mysql}</version>
            </dependency>
            <!-- commons-->
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${version.commons-io}</version>
            </dependency>
            <dependency>
                <groupId>commons-logging</groupId>
                <artifactId>commons-logging</artifactId>
                <version>${version.commons-loggin}</version>
            </dependency>
            <dependency>
                <groupId>commons-fileupload</groupId>
                <artifactId>commons-fileupload</artifactId>
                <version>${version.commons-fileupload}</version>
            </dependency>

            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${version.commons-io}</version>
            </dependency>

            <dependency>
                <groupId>commons-collections</groupId>
                <artifactId>commons-collections</artifactId>
                <version>${version.commons-collections}</version>
            </dependency>

            <!-- 日志 -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${version.slf4j}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-log4j12</artifactId>
                <version>${version.slf4j}</version>
            </dependency>
            <dependency>
                <groupId>log4j</groupId>
                <artifactId>log4j</artifactId>
                <version>${version.log4j}</version>
            </dependency>



            <!-- mybatis -->
            <dependency>
                <groupId>org.mybatis</groupId>
                <artifactId>mybatis</artifactId>
                <version>${version.mybatis}</version>
            </dependency>

            <!-- mybatis-spring -->
            <dependency>
                <groupId>org.mybatis</groupId>
                <artifactId>mybatis-spring</artifactId>
                <version>${version.mybatis-spring}</version>
            </dependency>

            <!--通用Mapper-->
            <dependency>
                <groupId>tk.mybatis</groupId>
                <artifactId>mapper</artifactId>
                <version>${version.tk.mybatis}</version>
            </dependency>

            <!--分页插件-->
            <dependency>
                <groupId>com.github.pagehelper</groupId>
                <artifactId>pagehelper</artifactId>
                <version>${version.pagehelper}</version>
            </dependency>

            <dependency>
                <groupId>com.github.jsqlparser</groupId>
                <artifactId>jsqlparser</artifactId>
                <version>${version.jsqlparser}</version>
            </dependency>
            <!--shiro-->
            <dependency>
                <groupId>org.apache.shiro</groupId>
                <artifactId>shiro-core</artifactId>
                <version>${version.shiro}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.shiro</groupId>
                <artifactId>shiro-web</artifactId>
                <version>${version.shiro}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.shiro</groupId>
                <artifactId>shiro-ehcache</artifactId>
                <version>${version.shiro}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.shiro</groupId>
                <artifactId>shiro-quartz</artifactId>
                <version>${version.shiro}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.shiro</groupId>
                <artifactId>shiro-spring</artifactId>
                <version>${version.shiro}</version>
            </dependency>

            <!-- quartz spring 3.1以上才支持quartz 2.2.1 -->
            <dependency>
                <groupId>org.quartz-scheduler</groupId>
                <artifactId>quartz</artifactId>
                <version>${version.quartz}</version>
                <exclusions>
                    <exclusion>
                        <groupId>c3p0</groupId>
                        <artifactId>c3p0</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.quartz-scheduler</groupId>
                <artifactId>quartz-jobs</artifactId>
                <version>${version.quartz}</version>
            </dependency>

            <!-- CXF -->
            <!--cxf webservice -->
            <dependency>
                <groupId>org.apache.cxf</groupId>
                <artifactId>cxf-rt-frontend-jaxws</artifactId>
                <version>${version.cxf}</version>
            </dependency>
            <!--cxf rest -->
            <dependency>
                <groupId>org.apache.cxf</groupId>
                <artifactId>cxf-rt-frontend-jaxrs</artifactId>
                <version>${version.cxf}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.cxf</groupId>
                <artifactId>cxf-rt-transports-http</artifactId>
                <version>${version.cxf}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.jaxrs</groupId>
                <artifactId>jackson-jaxrs-json-provider</artifactId>
                <version>${version.jackson-jaxrs-json-provider}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.cxf</groupId>
                <artifactId>cxf-rt-rs-extension-providers</artifactId>
                <version>${version.cxf}</version>
            </dependency>

            <!-- apache tiles 模板 -->
            <dependency>
                <groupId>org.apache.tiles</groupId>
                <artifactId>tiles-core</artifactId>
                <version>${version.tiles}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.slf4j</groupId>
                        <artifactId>jcl-over-slf4j</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>org.apache.tiles</groupId>
                <artifactId>tiles-api</artifactId>
                <version>${version.tiles}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.tiles</groupId>
                <artifactId>tiles-jsp</artifactId>
                <version>${version.tiles}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpclient</artifactId>
                <version>${version.httpclient}</version>
            </dependency>

            <dependency>
                <groupId>com.caucho</groupId>
                <artifactId>hessian</artifactId>
                <version>4.0.38</version>
            </dependency>

        </dependencies>

    </dependencyManagement>

    <profiles>
        <profile>
            <!--本地开发环境 -->
            <id>dev</id>
            <properties>
                <package.environment>dev</package.environment>
            </properties>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>
        <!--测试开发环境 -->
        <profile>
            <id>test</id>
            <properties>
                <package.environment>test</package.environment>
            </properties>
        </profile>
        <!--生产开发环境 -->
        <profile>
            <id>prod</id>
            <properties>
                <package.environment>prod</package.environment>
            </properties>
        </profile>
    </profiles>

    <build>

        <resources>
            <!-- 资源根目录排除各环境的配置，使用单独的资源目录来指定 -->
            <resource>
                <directory>src/main/resources</directory>
                <excludes>
                    <exclude>config/dev/*</exclude>
                    <exclude>config/test/*</exclude>
                    <exclude>config/prod/*</exclude>
                </excludes>
                <filtering>true</filtering>
            </resource>
            <!-- 此配置只为了将当前环境的配置文件复制到config目录下-->
            <resource>
                <directory>src/main/resources/config/${package.environment}</directory>
                <filtering>true</filtering>
                <targetPath>${project.build.directory}/classes/config</targetPath>
            </resource>
        </resources>

        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <encoding>utf-8</encoding>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <!-- 这是因为测试代码时遇到错误，它会停止编译。只需添加以下插件配置，使得测试出错不影响项目的编译。 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.tomcat.maven</groupId>
                <artifactId>tomcat7-maven-plugin</artifactId>
                <configuration>
                    <port>${server.port}</port>
                    <path>${server.path}</path>
                    <uriEncoding>utf-8</uriEncoding>

                    <ignorePackaging>true</ignorePackaging>
                    <contextReloadable>true</contextReloadable>
                    <update>true</update>
                    <!-- <addContextWarDependencies>true</addContextWarDependencies> -->
                    <maxHttpHeaderSize>8192</maxHttpHeaderSize>
                    <bufferSize>40960</bufferSize>
                    <acceptCount>300</acceptCount>
                    <socketBuffer>-1</socketBuffer>

                    <systemProperties>
                        <tomcatName>${server.name}</tomcatName>
                        <JAVA_OPTS>${server.jvm.params}</JAVA_OPTS>
                    </systemProperties>
                </configuration>
            </plugin>

        </plugins>

    </build>
</project>